Create html & css files for market app with Vue
Next step  page style

--- a/index.html
+++ b/index.html
@@ -19,11 +19,12 @@
         </ul>
         <p>Total: {{ totalPrice }}€</p>
 
-        <ul>
+        <!-- <ul>
           <li v-for="item in apiResponse">
               <a v-bind:href="item.url">{{ item.name }}</a>
           </li>
-      </ul>
+      </ul> -->
+      <!---- Image générique: https://via.placeholder.com/300x150 ---->
 
   </div>
   
