Training methods Vue
login value

--- a/front/login.html
+++ b/front/login.html
@@ -112,24 +112,50 @@ app.component('login-form', {
   template: `
     <form @submit.prevent="handleSubmit">
       <h1>{{ title }}</h1>
-      <custom-input v-model="password" :label="passwordLabel" />
-      <custom-input v-model="email" :label="emailLabel" />
+      <custom-input
+      v-for="(input, i) in inputs"
+      :key="i"
+        v-model="input.value"
+        :label="input.label"
+        :type="input.type"
+      />
       <button>Login</button>
     </form>
   `,
-  component: ['custom-input'],
+  //: Création d'une clé = un lien unique avec la boucle
+  //:: <p v-for="(str, i) in inputs" :key="str">{{ str }}</p>
+  //::: Afficher les index de la boucle
+  //:::: <p v-for="(str, i) in inputs" :key="i">{{ i }}</p>
+  //::::: Création d'un "custom component" + directives avec Vue 
+  //:::::: <custom-input v-model="password" :label="passwordLabel" />
+
+  //: TYpe de boucle dans Vue en ajoutant au paramètre l'index
+  //:: <custom-input v-for="(input, i) in inputs" :key="i" v-model="input.value"
+  components: ['custom-input'],
   data() {
     return {
     title: 'Login Form',
+    inputs: [
+    {
+      label: 'email',
+      value: '',
+      type: 'email'
+    },
+    {
+      label: 'password',
+      value: '',
+      type: 'password'
+    }
+    ],
     email: '',
     password: '',
+    emailLabel: 'Email',
     passwordLabel: 'Password',
-    emailLabel: 'Email'
   }
   },
   methods: {
     handleSubmit() {
-      console.log(this.email, password);
+      console.log(this.inputs[0].value, this.inputs[1].value);
       
     }
   }
@@ -139,10 +165,10 @@ app.component('custom-input', {
   template: `
     <label>
       {{ label }}
-      <input type="text" v-model="inputValue" >
+      <input :type="type" v-model="inputValue" >
     </label>
   `,
-  props: ['label', 'modelValue'],
+  props: ['label', 'type', 'modelValue'],
   computed: {
     inputValue: {
       get() {
